--- a/index.css
+++ b/index.css
@@ -1,20 +1,20 @@
     body                {margin: 0 auto;}
  
-    .col-sm-8           {background-color: white;
+    .col-md-8           {background-color: white;
                         color: gray;
                         float: left;
                         padding-left: 20px;
                         padding-right: 25px;
                         width: 650px;} 
 
-    .col-sm-8 h2        {border-bottom: 3px solid lightgray;
+    .col-md-8 h2        {border-bottom: 3px solid lightgray;
                         color: teal;
                         margin-top: 45px;
                         padding-bottom: 30px;}
                         
-    .col-sm-8 img       {width: 75%;}
+    .col-md-8 img       {width: 75%;}
 
-    .col-sm-4           {background-color: white;
+    .col-md-4           {background-color: white;
                         color: teal;
                         float: right;
                         height: 190px;
@@ -25,10 +25,10 @@
                         text-align: center;
                         width: 270px;}
     
-    .col-sm-4 h2        {border-bottom: 2px solid lightgray;
+    .col-md-4 h2        {border-bottom: 2px solid lightgray;
                         padding-bottom: 20px;} 
                         
-    .col-sm-4 img       {width: 25%;}
+    .col-md-4 img       {width: 25%;}
     
     .container-fluid    {background-color: lightgray;
                         padding: 50px 215px 50px 145px;}
@@ -63,7 +63,7 @@
                         color: white;
                         height: 100px;
                         line-height: 100px;
-                        margin-left: 145px;
+                        margin-left: 115px;
                         text-align: center;
                         width: 300px;}
 
@@ -72,3 +72,34 @@
 
     #teal               {background-color: teal;
                         height: 10px;}
+
+                        @media screen and (max-width: 768px) {
+                            .col-md-8 {
+                                float: none;
+                            }
+
+                            .col-md-8 img {
+                                width: 130%;
+                            }
+        
+                            .col-md-4 {
+                                background-color: purple;
+                                float: none;
+                                margin-top: 15px;
+                                left: 0px;
+                            }      
+
+
+                            footer {
+                                height: 100px;
+                               
+                                width: 108%;
+                            }
+
+                            #mainRight {
+
+                                margin-top: 330px;
+                            }
+
+                            
+                        }
