--- a/contact.css
+++ b/contact.css
@@ -57,7 +57,7 @@
     input[type=submit] {background-color: teal;
                         color: white;
                         height: 40px;
-                        width: 20%;}
+                        width: 40%;}
 
     #nameTag            {background-color: teal;
                         color: white;
@@ -94,6 +94,10 @@
                                 height: 100px;
                                
                                 width: 108%;
+                            }
+
+                            #nameTag {
+                                height: 110%;
                             }
 
                             
