--- a/index.css
+++ b/index.css
@@ -76,10 +76,12 @@
                         @media screen and (max-width: 768px) {
                             .col-md-8 {
                                 float: none;
+                                padding-right: 10%;
+                                
                             }
 
                             .col-md-8 img {
-                                width: 130%;
+                                width: 75%;
                             }
         
                             .col-md-4 {
@@ -98,7 +100,7 @@
 
                             #mainRight {
 
-                                margin-top: 330px;
+                                margin-top: 130px;
                             }
 
                             
