--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
     .col-md-8           {background-color: white;
                         color: gray;
                         float: left;
+                        font-size: 90%;
                         padding-left: 20px;
                         padding-right: 25px;
                         width: 650px;} 
@@ -18,14 +19,15 @@
                         color: teal;
                         float: right;
                         height: 190px;
-                        left: 200px;
+                        left: 100px;
                         padding-left: 5px;
                         padding-right: 5px;
-                        
+                    
                         text-align: center;
                         width: 270px;}
     
     .col-md-4 h2        {border-bottom: 2px solid lightgray;
+                        
                         padding-bottom: 20px;} 
                         
     .col-md-4 img       {width: 25%;}
@@ -61,10 +63,11 @@
 
     #nameTag            {background-color: teal;
                         color: white;
-                        height: 100px;
+                        height: 110%;
                         line-height: 100px;
                         margin-left: 115px;
                         text-align: center;
+                        
                         width: 300px;}
 
     #nameTag h2         {position: relative;
@@ -95,7 +98,7 @@
                             footer {
                                 height: 100px;
                                
-                                width: 108%;
+                                width: 100%;
                             }
 
                             #mainRight {
